[gd_scene load_steps=13 format=1]

[ext_resource path="res://scripts/autoload/console.gd" type="Script" id=1]
[ext_resource path="res://fonts/roboto_mono_bold_italic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/roboto_mono_italic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/roboto_mono_bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/roboto_mono_regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="Animation" id=1]

resource/name = "fade"
length = 0.25
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.25 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 1.0, 0.0 ] }
tracks/1/type = "method"
tracks/1/path = NodePath("LineEdit")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.25 ), "transitions":FloatArray( 1, 1 ), "values":[ { "args":[  ], "method":"clear" }, { "args":[  ], "method":"clear" } ] }

[sub_resource type="DynamicFont" id=2]

font/size = 14
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]

font/size = 14
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]

font/size = 14
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]

font/size = 14
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=6]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.0132904, 0.186026, 0.261719, 0.701458 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="DynamicFont" id=7]

font/size = 14
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[node name="Console" type="Panel"]

visibility/opacity = 0.0
visibility/self_opacity = 0.6
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 224.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/fade = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="ConsoleText" type="RichTextLabel" parent="."]

anchor/right = 1
anchor/bottom = 1
rect/min_size = Vector2( 1012, 276 )
hint/tooltip = "Project snowman debug console\n\nTo list all command type <cmdlist>"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 8.0
margin/right = 8.0
margin/bottom = 32.0
custom_fonts/bold_italics_font = SubResource( 2 )
custom_fonts/italics_font = SubResource( 3 )
custom_fonts/bold_font = SubResource( 4 )
custom_fonts/normal_font = SubResource( 5 )
custom_constants/line_separation = 4
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = -1

[node name="LineEdit" type="LineEdit" parent="."]

anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 32.0
margin/right = 0.0
margin/bottom = 0.0
custom_styles/focus = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "sa"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[connection signal="finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_finished"]

[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]


